fix: fixed contact sheet trigger clipping

--- a/webapp/channels/src/components/profile_popover/wc_profile_popover.scss
+++ b/webapp/channels/src/components/profile_popover/wc_profile_popover.scss
@@ -1,10 +1,3 @@
 wc-contact-sheet {
-    cursor: pointer;
-    padding: 0;
-    display: inline-block;
-    max-width: 100%;
-
-    &.full-width {
-        min-width: 100%;
-    }
+    display: none;
 }
